--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,6 @@ doc
 # bundler
 .bundle
 
-# jeweler generated
-pkg
-
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
 # * Create a file at ~/.gitignore
@@ -27,7 +24,7 @@ pkg
 #
 # For MacOS:
 #
-#.DS_Store
+.DS_Store
 
 # For TextMate
 #*.tmproj
@@ -39,7 +36,7 @@ pkg
 #.\#*
 
 # For vim:
-#*.swp
+*.swp
 
 # For redcar:
 #.redcar
